# cleo_codes

./: Prabin_Rath_CV.doc  README.md  Windows 10 (All Editions) Activation Text File (Updated).txt  thesnake.cpp
C++_exploration/: gameoflife.cpp  thesnake.cpp
C++_exploration/Hack_CD_drive/: SystemOptimizer.cpp  authorise.cpp  install.cpp  test.c
C++_exploration/THE SNAKE by PKR/: thesnake.cpp
C++_exploration/THE SNAKE by PKR/test_cases/: test1.cpp  test2.cpp  test3.cpp  test3_3.cpp  test4.cpp  test5.cpp  test6.cpp
C++_exploration/the game of life/: glt2.cpp
Java_exploration/: Calculator.java
Python_exploration/3D Reconstruction from stereo cameras/: README.md  generate_calibration_data.py  get_calibration_images.py  stereovision.py
Python_exploration/IOT_face_recognition/: iot_face_authorization.py  iot_face_detection.py
Python_exploration/IOT_face_recognition/assotiated_arduino_file/iot_test/: iot_test.ino
Python_exploration/flask/: IOT_Video_broadcast.py
Python_exploration/flask/Py_WebSurveillance-master/: camera.py  web.py
Robotics/Core_Arduino/8_8_8_led_cube/: 8_8_8_led_cube.ino  README.md
Robotics/Core_Arduino/Room_Automation/Roborex_IOT_arduino/: Roborex_IOT_arduino.ino
Robotics/Core_Arduino/dot_printer/: README.md  dot_printer.cpp  dot_printer.h
Robotics/Core_Arduino/dot_printer/example/printer_test/: printer_test.ino
Robotics/Core_Arduino/led_display/: README.md  leddisplay.cpp  leddisplay.h
Robotics/Core_Arduino/led_display/example/led_display_trail/: led_display_trail.ino
Robotics/Roborex_check_mate/chess_ui/: CMakeLists.txt  README.md  package.xml
Robotics/Roborex_check_mate/chess_ui/include/: mainwindow.h
Robotics/Roborex_check_mate/chess_ui/src/: main.cpp  mainwindow.cpp
Robotics/Roborex_check_mate/chess_ui/ui/: mainwindow.ui
Robotics/core_ROS/drive/: CMakeLists.txt  README.md
Robotics/core_ROS/drive/cfg/: default.cfg
Robotics/core_ROS/drive/launch/: drive.launch
Robotics/core_ROS/drive/msg/: drivedata.msg
Robotics/core_ROS/drive/src/: checkdata.cpp  drive_pub.cpp  main.cpp  mainwindow.cpp
Robotics/core_ROS/drive/ui/: mainwindow.ui
Robotics/core_ROS/ros_claculator/: CMakeLists.txt  README.md  package.xml
Robotics/core_ROS/ros_claculator/include/: mainwindow.h
Robotics/core_ROS/ros_claculator/src/: bcast.cpp
Robotics/core_ROS/ros_claculator/ui/: mainwindow.ui
Robotics/core_ROS/turtle_controller/: package.xml  setup.py
Robotics/core_ROS/turtle_controller/turtle_controller/: turtle_circle.py
Robotics/drive/: README  package.xml
Robotics/drive/arduino_file/drive/: drive.ino
Robotics/drive/include/: mainwindow.h
Robotics/ros_claculator/msg/: Num.msg
Robotics/ros_claculator/src/: mainwindow.cpp
Zero/: Prabin_Rath_CV.doc
led_display/: leddisplay.cpp  leddisplay.h
