<?xml version="1.0"?>
<package>
  <name>myfirstros_node</name>
  <version>0.0.0</version>
  <description>An trail execution app</description>
  <maintainer email="prabinrath123@gmail.com">Prabin Rath</maintainer>
  <license>BSD</license>
  <author email="prabinrath123@gmail.com">Prabin Rath</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
